# gaibase

./: .envrc  .gitignore  app.py  devbox.json  hoge.ipynb  pyproject.toml  requirements.txt
app/: app.py  config.py  lib.py  log_config.json
app/model/: account.py
app/pages/: 01_セッティング.py  02_log.py  02_page.py  03_backlog.py  03_page.py  04_dialog.py  99_backlog.py
app/repository/: account.py  workspace.py
app/util/: db.py
db/: schema.sql
db/init_data/: accounts.csv  import.sh  workspace_members.csv  workspaces.csv
db/migrations/: 20240921045152_create_users_table.sql  20240921053138_create_workspace_table.sql  20240921054255_create_workspace_members_table.sql
e2e/: sample_test.py
tests/model/: account_test.py
